img extension update

--- a/content/craft.html
+++ b/content/craft.html
@@ -202,7 +202,7 @@ Password: 4aUh0A8PbVJxgd
 								</code>
 								<br />
 								<p>The good thing about these credentials is, is that now we can create an authentication token of our own to send authenticated requests to the craft-api endpoint. As you know from a little while back, we found the page https://api.craft.htb/api/ . This page has an option to generate our own authentication token.</p>
-								<center></center><img src="../images/craft/login_auth.png" style="max-height:417;max-width:1422;" class="image"></center>
+								<center></center><img src="../images/craft/login_auth.PNG" style="max-height:417;max-width:1422;" class="image"></center>
 								<br />
 								<p>In order to leverage this, click on 'Try it out' -> Execute. An authentication window will pop up asking for a username and password. Enter the credentials we just found, this should give you an authentication token as such:</p>
 								<code>
