Added port tags

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<meta name="description" content="A site with documentation about security, exploits and vulnerabilities. Want to know more about hacking tools? You'll find it here!">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
-		<meta name="keywords" content="hackthebox,htb,ctf,security,hacking,hack,heartbleed,krack,crack,stack,memory,stacksec,it,secure,securing,hacks,hackers,system,systems,computers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,exploit,metaspoit,kali,linux,windows,mac,vulnerable,exploitable,vuln,meta,sploit,payload,scanning,nmap,black,white,grey,hat,information,info,book,write,information security">
+		<meta name="keywords" content="security,hacking,hack,hacks,hackers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,kali,linux,windows,vulnerable,exploitable,vuln,scanning,nmap,black,white,grey,hat,information,info,information security">
 		<!-- InstanceEndEditable -->
 		<meta name="author" content="Sohvaxus">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -107,6 +107,7 @@
 										<a class="tag">forwarding</a>
 										<a class="tag">tunneling</a>
 										<a class="tag">port</a>
+										<a class="tag">22</a>
 									</div>
 								</div>
 								<hr class="solid">
@@ -184,6 +185,7 @@
 										<a class="tag">tutorial</a>
 										<a class="tag">tools</a>
 										<a class="tag">recon</a>
+										<a class="tag">80</a>
 									</div>
 								</div>
 								<hr class="solid">
