--- a/content/theharvester.html
+++ b/content/theharvester.html
@@ -27,7 +27,7 @@
 		<meta name="description" content="In-depth explanation and examples from information gathering with TheHarvester.">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
-		<meta name="keywords" content="theharvester, the harvester, gathering, information gathering, security,hacking,hack,heartbleed,krack,crack,stack,memory,stacksec,it,secure,securing,hacks,hackers,system,systems,computers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,exploit,metaspoit,kali,linux,windows,mac,vulnerable,exploitable,vuln,meta,sploit,payload,scanning,nmap,black,white,grey,hat,information,info,book,write,WPA2,wifi,protocol,fix,how to">
+		<meta name="keywords" content="theharvester,the,harvester,gathering,information gathering,security,hacking,hack,crack,it,hacks,hackers,documentation,tutorial,explanation,how,to,writeup,vulnerability,exploit,vulnerable,exploitable,vuln,scanning,nmap,black,white,grey,hat,information,info,how to">
 		<!-- InstanceEndEditable -->
 		<meta name="author" content="Sohvaxus">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -121,7 +121,7 @@
                         <p>Last updated: 21 november 2018</p>
                         <ol>
                             <li><h5>Description</h5></li>
-                            <p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different pulic sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
+                            <p>TheHarvester is an OSINT tool for gathering subdomains, email addresses, open ports, banners, employee names, and much more from different public sources. (Google, Bing, PGP key servers, ...). In order to gather this information it will do active and passive information gathering.</p>
                             <p>You would want to use this tool when you are curious about the visibility of your company on the internet or for information gathering purposes during a penetration test.</p>
                             <li><h5>Cheatsheet</h5></li>
                              <code>
