--- a/content/winxp-sp1-privesc.html
+++ b/content/winxp-sp1-privesc.html
@@ -27,7 +27,7 @@
 		<meta name="description" content="How to elevate a low level shell to SYSTEM on Windows XP SP1 via services.">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
-		<meta name="keywords" content="windows,xp,privilege,escalation,tutorial,how,to,sp1,x86,upnphost,SSDPSRV,service,services,system">
+		<meta name="keywords" content="windows,xp,privilege,escalation,tutorial,how,to,sp1,sp0,x86,upnphost,SSDPSRV,service,services,system,exploit">
 		<!-- InstanceEndEditable -->
 		<meta name="author" content="Sohvaxus">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,14 +67,14 @@
 				<!-- CONTENT -->
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
-					  <h1>Windows XP SP1 Privilege Escalation to System</h1>
+					  <h1>Windows XP SP0/SP1 Privilege Escalation to System</h1>
 					<!-- InstanceEndEditable -->
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
 						<ol class="breadcrumb">
 						  	<li class="breadcrumb-item"><a href="../index.html">Home</a></li>
 							<!-- InstanceBeginEditable name="breadcrumb" -->
-						  	<li class="breadcrumb-item active">Windows XP SP1 Privilege Escalation</li>
+						  	<li class="breadcrumb-item active">Windows XP SP0/SP1 Privilege Escalation</li>
 							<!-- InstanceEndEditable -->
 					    </ol>
 						<div class="row top-buffer">
@@ -92,7 +92,7 @@
 										</tr>
 										<tr>
 											<td>Vulnerable version(s):</td>
-											<td>SP0 to SP1</td>
+											<td>SP0/SP1</td>
 										</tr>
 										<tr>
 											<td>Patched version(s)</td>
