--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<img src="images/privesc.png" alt="Privilege Escalation" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/winxp-sp1-privesc.html">Windows XP SP1 Privilege Escalation to System</a>
+										<a href="content/winxp-sp1-privesc.html">Windows XP SP0/SP1 Privilege Escalation to System</a>
 										<p><i>may 20th 2020</i></p>
 										<p>This method of privilege escalation relies on vulnerable Microsoft Services. Most services in newer Windows versions (starting from Windows XP SP2) are no longer vulnerable. Vulnerable in this case, means that we can edit the services' parameters. This particular article focusses on the services SSDPSRV and upnphost.</p>
 										<span>Tags:</span>
