--- a/content/winxp-sp1-privesc.html
+++ b/content/winxp-sp1-privesc.html
@@ -12,7 +12,7 @@
 		</script>
 		<link rel="shortcut icon" href="../favicon/favicon.ico"/>
 		<!-- InstanceBeginEditable name="title" -->
-		<title>Windows XP SP1 Privilege Escalation to System Tutorial</title>
+		<title>Windows XP SP0/SP1 Privilege Escalation to System Tutorial</title>
 		<!-- InstanceEndEditable -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
