--- a/content/ssh.html
+++ b/content/ssh.html
@@ -24,10 +24,10 @@
 
 		<meta charset="UTF-8">
 		<!-- InstanceBeginEditable name="description" -->
-		<meta name="description" content="SSH Tunneling, port forwarding and other tips and tricks.">
+		<meta name="description" content="SSH Local, Remote and Dynamic port forwarding tutorial.">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
-		<meta name="keywords" content="security,hacking,hack,tunneling,krack,crack,stack,memory,proxy,it,secure,securing,hacks,hackers,system,systems,computers,documentation,tutorial,explanation,how,to,writeup,document,vulnerability,exploit,metaspoit,kali,linux,windows,ssh,vulnerable,exploitable,vuln,port,forwarding,forward,scanning,tunneling,black,white,grey,hat,information,info,book,write,secu,bleeding,heart,protect,exploitation,information security">
+		<meta name="keywords" content="security,hacking,hack,proxy,it,hacks,hackers,documentation,tutorial,explanation,how,to,writeup,vulnerability,kali,linux,windows,ssh,vulnerable,port,forwarding,forward,scanning,tunneling,hat,information,exploitation,local,remote,dynamic">
 		<!-- InstanceEndEditable -->
 		<meta name="author" content="Sohvaxus">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,7 +68,7 @@
 				<div class="col-sm-8" id="content-page">
 					<div class="container-fluid"><!-- InstanceBeginEditable name="h1" -->
 					  	<h1>SSH</h1>
-						<center><p><i>Tunneling, port forwarding and proxy tutorial</i></p></center>
+						<center><p><i>Local, Remote and Dynamic port forwarding</i></p></center>
 					<!-- InstanceEndEditable -->
 					<hr class="solid">
 						<!-- BREADCRUMBS -->
