--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 										<img src="images/ssh.png" alt="SSH" height="75" width="75">
 									</div>
 									<div class="col-sm-10">
-										<a href="content/ssh.html">SSH - Port forwarding, tunneling and other tips and tricks</a>
+										<a href="content/ssh.html">SSH - Local, Remote and Dynamic port forwarding</a>
 										<p><i>april 08th 2019</i></p>
-										<p>SSH provides a secure channel over an unsecured network in a client–server architecture, connecting an SSH client application with an SSH server. The protocol specification distinguishes between two major versions, referred to as SSH-1 and SSH-2. The standard TCP port for SSH is 22. SSH is generally used to access Unix-like operating systems, but it can also be used on Microsoft Windows. Windows 10 uses OpenSSH as its default SSH client.</p>
+										<p>In this article we will cover the concept of local, remote and dynamic port forwarding via the Secure Socket Layer (SSH) protocol. This article is still partially under construction.</p>
 										<span>Tags:</span>
 										<a class="tag">ssh</a>
 										<a class="tag">forwarding</a>
