--- a/index.html
+++ b/index.html
@@ -77,6 +77,29 @@
 							<li>
 								<div class="row top-buffer">
 									<div class="col-sm-2" id="content-img">
+										<img src="images/tools-icon-white.png" alt="Tool" height="75" width="75">
+									</div>
+									<div class="col-sm-10">
+										<a href="content/gobuster.html">Gobuster - Guide and examples</a>
+										<p><i>august 15th 2021</i></p>
+										<p>Gobuster is a tool used to brute force URLs (directories and sites) from websites, DNS subdomains, Virtual Host names and open Amazon S3 buckets. It can be particularly useful during CTF challenges that require you to brute force webserver data, but also during pentest engagements.</p>
+										<span>Tags:</span>
+										<a class="tag">gobuster</a>
+										<a class="tag">bruteforce</a>
+										<a class="tag">subdomain</a>
+										<a class="tag">directory</a>
+										<a class="tag">vhost</a>
+										<a class="tag">80</a>
+										<a class="tag">enumeration</a>
+										<a class="tag">recon</a>
+										<a class="tag">tools</a>
+									</div>
+								</div>
+								<hr class="solid">
+							</li>
+							<li>
+								<div class="row top-buffer">
+									<div class="col-sm-2" id="content-img">
 										<img src="images/privesc.png" alt="Privilege Escalation" height="100" width="100">
 									</div>
 									<div class="col-sm-10">
