--- a/content/gobuster.html
+++ b/content/gobuster.html
@@ -127,7 +127,7 @@
 									<p>Gobuster is a tool used to brute force URLs (directories and sites) from websites, DNS subdomains, Virtual Host names and open Amazon S3 buckets. It can be particularly useful during CTF challenges that require you to brute force webserver data, but also during pentest engagements.</p>
 								<li><h5>Installation on Linux (Kali)</h5></li>
 								<p>GoBuster is not on Kali by default. In case you have to install it, this is how.</p>
-								<p>1. Since Gobuster is written in the Go language, we need to install the Go environment on our Kali machine. Download the Go installer file <a href="https://golang.org/doc/install">here</a> from their official site. At the time of writing, the file is called "go1.16.7.linux-amd64.tar.gz". You will need at least version 1.16.0 to compile Gobuster.</p>
+								<p>1. Since Gobuster is written in the Go language, we need to install the Go environment on our Kali machine. Download the Go installer file <a href="https://golang.org/dl/">here</a> from their official site. At the time of writing, the file is called "go1.16.7.linux-amd64.tar.gz". You will need at least version 1.16.0 to compile Gobuster.</p>
 								<p>2. Navigate to the directory where the file you just downloaded is stored, and run the following command:</p>
 								<code>
 # Don't forget to change the filename in this command to the version you downloaded.
