--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
 										<a class="tag">subdomain</a>
 										<a class="tag">directory</a>
 										<a class="tag">vhost</a>
-										<a class="tag">80</a>
+										<a class="tag">web</a>
 										<a class="tag">enumeration</a>
 										<a class="tag">recon</a>
 										<a class="tag">tools</a>
+										<a class="tag">80</a>
 									</div>
 								</div>
 								<hr class="solid">
