--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<div class="col-sm-10">
 										<a href="content/gobuster.html">Gobuster - Guide and examples</a>
 										<p><i>august 15th 2021</i></p>
-										<p>Gobuster is a tool used to brute force URLs (directories and sites) from websites, DNS subdomains, Virtual Host names and open Amazon S3 buckets. It can be particularly useful during CTF challenges that require you to brute force webserver data, but also during pentest engagements.</p>
+										<p>Gobuster is a tool used to brute force URLs (directories and files) from websites, DNS subdomains, Virtual Host names and open Amazon S3 buckets. It can be particularly useful during CTF challenges that require you to brute force webserver data, but also during pentest engagements.</p>
 										<span>Tags:</span>
 										<a class="tag">gobuster</a>
 										<a class="tag">bruteforce</a>
