Added utterances comment section

--- a/content/gobuster.html
+++ b/content/gobuster.html
@@ -27,7 +27,7 @@
 		<meta name="description" content="In-depth explanation and examples of Gobuster, a brute force tool for web directories/files, subdomains and vhosts.">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
-		<meta name="keywords" content="gobuster,enumeration,golang,dns,subdirectories,hacking,ctf,tutorial,howto,brute,force,dir,vhost,subdomain">
+		<meta name="keywords" content="gobuster,enumeration,golang,dns,subdirectories,hacking,ctf,tutorial,howto,brute,force,dir,vhost,subdomain,usage">
 		<!-- InstanceEndEditable -->
 		<meta name="author" content="Sohvaxus">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -251,6 +251,13 @@ gobuster vhost -u https://example.com -w common-vhosts.txt
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
+				<script src="https://utteranc.es/client.js"
+						repo="Sohvaxus/Sohvaxus.github.io "
+						issue-term="pathname"
+						theme="github-dark"
+						crossorigin="anonymous"
+						async>
+				</script>
 				<script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
 				<script>
 					var elements = document.querySelectorAll('[data-chaffle]');
