--- a/content/heartbleed.html
+++ b/content/heartbleed.html
@@ -225,6 +225,13 @@ python heartbleed.py -h
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
+				<script src="https://utteranc.es/client.js"
+						repo="Sohvaxus/Sohvaxus.github.io "
+						issue-term="pathname"
+						theme="github-dark"
+						crossorigin="anonymous"
+						async>
+				</script>
 				<script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
 				<script>
 					var elements = document.querySelectorAll('[data-chaffle]');
