--- a/content/netcat.html
+++ b/content/netcat.html
@@ -223,6 +223,13 @@ Connection to localhost 80 port [tcp/http] succeeded!
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
+				<script src="https://utteranc.es/client.js"
+						repo="Sohvaxus/Sohvaxus.github.io "
+						issue-term="pathname"
+						theme="github-dark"
+						crossorigin="anonymous"
+						async>
+				</script>
 				<script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
 				<script>
 					var elements = document.querySelectorAll('[data-chaffle]');
