--- a/content/theharvester.html
+++ b/content/theharvester.html
@@ -186,6 +186,13 @@ theharvester -d google.com -l 500 -b all -f results.html
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
+				<script src="https://utteranc.es/client.js"
+						repo="Sohvaxus/Sohvaxus.github.io "
+						issue-term="pathname"
+						theme="github-dark"
+						crossorigin="anonymous"
+						async>
+				</script>
 				<script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
 				<script>
 					var elements = document.querySelectorAll('[data-chaffle]');
