--- a/content/ssh.html
+++ b/content/ssh.html
@@ -164,7 +164,17 @@ ssh -L &lt;LPORT&gt;:&lt;RHOST&gt;:&lt;RPORT&gt; user@&lt;RHOST&gt;
 							</ul>
 							<!-- END OF ARTICLE CONTENT -->
 						</div>
-					  <!-- InstanceEndEditable --></div>
+					  <!-- InstanceEndEditable -->
+						<!-- COMMENTS -->
+						<script src="https://utteranc.es/client.js"
+							repo="Sohvaxus/Sohvaxus.github.io"
+							issue-term="pathname"
+							theme="github-dark"
+							crossorigin="anonymous"
+							async>
+						</script>
+						<!-- END OF COMMENTS -->
+					  </div>
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
