Added utterances comment sections

--- a/content/netcat.html
+++ b/content/netcat.html
@@ -219,10 +219,21 @@ Connection to localhost 80 port [tcp/http] succeeded!
 					      </ul>
 						  <!-- END OF ARTICLE CONTENT -->
 					    </div>
-					  <!-- InstanceEndEditable --></div>
+					  <!-- InstanceEndEditable -->
+						<!-- COMMENTS -->
+						<script src="https://utteranc.es/client.js"
+							repo="Sohvaxus/Sohvaxus.github.io"
+							issue-term="pathname"
+							theme="github-dark"
+							crossorigin="anonymous"
+							async>
+						</script>
+						<!-- END OF COMMENTS -->
+					  </div>
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
+				
 				<script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
 				<script>
 					var elements = document.querySelectorAll('[data-chaffle]');
