--- a/content/jerry.html
+++ b/content/jerry.html
@@ -258,30 +258,19 @@ C:\Users\Administrator\Desktop\flags>more &quot;2 for the price of 1.txt&quot;
 						<!-- END OF ARTICLE CONTENT -->
 					  	<!-- InstanceEndEditable -->
 						</div>
+						<!-- COMMENTS -->
+						<script src="https://utteranc.es/client.js"
+							repo="Sohvaxus/Sohvaxus.github.io"
+							issue-term="pathname"
+							theme="github-dark"
+							crossorigin="anonymous"
+							async>
+						</script>
+						<!-- END OF COMMENTS -->
 					</div>
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
-				<script>
-					var elements = document.querySelectorAll('[data-chaffle]');
-					var elm = document.querySelectorAll('[data-chaffle-onLoad]');
-
-					Array.prototype.forEach.call(elements, function (el) {
-						var chaffle = new Chaffle(el)
-						el.addEventListener('mouseover', function () {
-							chaffle.init();
-						});
-					});
-
-					Array.prototype.forEach.call(elm, function (el) {
-						var chaffle = new Chaffle(el, {
-							delay: 200
-						})
-						setInterval(function(){
-							chaffle.init();
-						}, 8000)
-					});
-				</script>
 				<!-- END OF SCRIPTS -->
 			</div>
 		</div>
