--- a/content/nikto.html
+++ b/content/nikto.html
@@ -188,32 +188,20 @@ nikto -update
 							</ul>
 							<!-- END OF ARTICLE CONTENT -->
 						</div>
-					  <!-- InstanceEndEditable --></div>
+					  <!-- InstanceEndEditable -->
+						<!-- COMMENTS -->
+						<script src="https://utteranc.es/client.js"
+							repo="Sohvaxus/Sohvaxus.github.io"
+							issue-term="pathname"
+							theme="github-dark"
+							crossorigin="anonymous"
+							async>
+						</script>
+						<!-- END OF COMMENTS -->
+					  </div>
 				</div>
 				<!-- END OF CONTENT -->
 				<!-- SCRIPTS -->
-				
-				<script src="../chaffle/chaffle.min.js" charset="utf-8"></script>
-				<script>
-					var elements = document.querySelectorAll('[data-chaffle]');
-					var elm = document.querySelectorAll('[data-chaffle-onLoad]');
-
-					Array.prototype.forEach.call(elements, function (el) {
-						var chaffle = new Chaffle(el)
-						el.addEventListener('mouseover', function () {
-							chaffle.init();
-						});
-					});
-
-					Array.prototype.forEach.call(elm, function (el) {
-						var chaffle = new Chaffle(el, {
-							delay: 200
-						})
-						setInterval(function(){
-							chaffle.init();
-						}, 8000)
-					});
-				</script>
 				<!-- END OF SCRIPTS -->
 			</div>
 		</div>
