--- a/content/gobuster.html
+++ b/content/gobuster.html
@@ -27,7 +27,7 @@
 		<meta name="description" content="In-depth explanation and examples of Gobuster, a brute force tool for web directories/files, subdomains and vhosts.">
 		<!-- InstanceEndEditable -->
 		<!-- InstanceBeginEditable name="keywords" -->
-		<meta name="keywords" content="gobuster,enumeration,golang,dns,subdirectories,hacking,ctf,tutorial,howto,brute,force,dir,vhost,subdomain,usage">
+		<meta name="keywords" content="gobuster,enumeration,golang,dns,subdirectories,hacking,ctf,tutorial,howto,brute,force,dir,vhost,subdomain,usage,example,exclude,syntax">
 		<!-- InstanceEndEditable -->
 		<meta name="author" content="Sohvaxus">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -121,7 +121,7 @@
 						<!-- InstanceBeginEditable name="article" -->
 						<div class="row top-buffer">
 							<!-- ARTICLE CONTENT -->
-							<p>Last updated: october 10th 2022</p>
+							<p>Last updated: august 30th 2023</p>
 							<ol>
 								<li><h5>Description</h5></li>
 									<p>Gobuster is a tool used to brute force URLs (directories and files) from websites, DNS subdomains, Virtual Host names and open Amazon S3 buckets. It can be particularly useful during CTF challenges that require you to brute force webserver data, but also during pentest engagements.</p>
@@ -164,6 +164,9 @@ gobuster dir -u [target ip] -w [wordlist]
 
 # Example
 gobuster dir -u http://192.168.0.1:8080 -w /usr/share/wordlists/dirbuster/directory-list-2.3-small.txt
+									
+# Example which excludes pages with a certain length
+gobuster dir -u http://192.168.0.1:8080 -w /usr/share/wordlists/dirbuster/directory-list-2.3-small.txt --exclude-length 9265
 								</code>
 								<br />
 								<p><u>DNS mode</u> - Used for DNS subdomain bruteforcing</p>
