--- a/content/gobuster.html
+++ b/content/gobuster.html
@@ -165,7 +165,7 @@ gobuster dir -u [target ip] -w [wordlist]
 # Example
 gobuster dir -u http://192.168.0.1:8080 -w /usr/share/wordlists/dirbuster/directory-list-2.3-small.txt
 									
-# Example to search for specific file extensions, like PHP. For multiple extension: -x .php, .txt, ...
+# Example to search for specific file extensions, like PHP. For multiple extensions: -x .php, .txt, ...
 gobuster dir -u http://192.168.0.1:8080 -x .php -w /usr/share/wordlists/dirbuster/directory-list-2.3-small.txt
 									
 # Example which excludes pages with a certain length
